smile.shioiri.jp

--- a/prep/まだ先.md
+++ b/prep/まだ先.md
@@ -1,8 +1,3 @@
-地域の皆様からのご賛同が得られる場合・・・
-
-上田市消防後援会
-
-
 ### もくじ
 
 [塩入友広とは](#塩入友広とは)
@@ -97,4 +92,7 @@ SNSを活用し、活動内容の広報を行います。
 
 「調べて納得して軌道修正することが得意です」
 
-旧塩田町エリアの暮らしやすさ向上を目的に、塩田地区出身議員との情報交換を積極的に行います。
+自治会別　自治会費他徴収金調査
+
+・調査結果の共有に賛成する。
+・調査結果の情報提供を希望する。
